--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.9.0
   get: ^4.7.2
   firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
